--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "ios": {
       "supportsTablet": true,
       "config": {
-        "googleMapsApiKey": "AIzaSyCa9xyUpRWSIW-zLuwWwmg324ysIvI2YM8"
+        "googleMapsApiKey": "${EXPO_PUBLIC_GOOGLE_MAP_API_KEY}"
       },
       "bundleIdentifier": "com.yourcompany.trimizyclient",
       "infoPlist": {
@@ -59,7 +59,15 @@
       "router": {},
       "eas": {
         "projectId": "7af2f3c5-3806-4b33-90fa-a3c6ddcd50e7"
-      }
+      },
+      "EXPO_PUBLIC_FIREBASE_API_KEY": "${EXPO_PUBLIC_FIREBASE_API_KEY}",
+      "EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN": "${EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN}",
+      "EXPO_PUBLIC_FIREBASE_PROJECT_ID": "${EXPO_PUBLIC_FIREBASE_PROJECT_ID}",
+      "EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET": "${EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET}",
+      "EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "${EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID}",
+      "EXPO_PUBLIC_FIREBASE_APP_ID": "${EXPO_PUBLIC_FIREBASE_APP_ID}",
+      "EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID": "${EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID}",
+      "EXPO_PUBLIC_GOOGLE_MAP_API_KEY": "${EXPO_PUBLIC_GOOGLE_MAP_API_KEY}"
     }
   }
 }
