--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
       "config": {
         "googleMapsApiKey": "${EXPO_PUBLIC_GOOGLE_MAP_API_KEY}"
       },
-      "bundleIdentifier": "com.yourcompany.trimizyclient",
+      "bundleIdentifier": "com.yourcompany.trimizyclientios",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "CFBundleURLTypes": [
@@ -31,7 +31,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.yourcompany.trimizyclient"
+      "package": "com.yourcompany.trimizyclient",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "bundler": "metro",
