--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "web": "expo start --web",
     "lint": "expo lint",
     "postinstall": "patch-package"
-
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^5.1.6",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-firebase/app": "^23.0.1",
+    "@react-native-firebase/auth": "^23.0.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
