feat: Add recommended section and enhance home page UI
- Added 'RECOMMENDED FOR YOU' horizontal scrolling section with 2-row grid layout
- Added 'BARBERS NEARBY YOU' section title for main shop listings
- Implemented proper vertical and horizontal scrolling functionality
- Updated Relax Massage Center image to appropriate spa reception image
- Enhanced home screen with food delivery app-style UI patterns
- Added checkout page with cart management and service suggestions
- Added profile page with user authentication and dynamic avatars
- Improved overall user experience with better visual hierarchy

--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
       "config": {
         "googleMapsApiKey": "${EXPO_PUBLIC_GOOGLE_MAP_API_KEY}"
       },
-      "bundleIdentifier": "com.yourcompany.trimizyclient",
+      "bundleIdentifier": "com.yourcompany.trimizyclient.dev",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "CFBundleURLTypes": [
@@ -31,7 +31,7 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.yourcompany.trimizyclient"
+      "package": "com.yourcompany.trimizyclient.dev"
     },
     "web": {
       "bundler": "metro",
